--- a/new/construction-company-website-template/css/style.css
+++ b/new/construction-company-website-template/css/style.css
@@ -14,7 +14,7 @@ h3,
 h4,
 h5, 
 h6 {
-    color: #030f27;
+    color: #000000;
 }
 
 a {
@@ -25,7 +25,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-    color: #fdbe33;
+    color: #FFCD00;
     outline: none;
     text-decoration: none;
 }
@@ -37,7 +37,6 @@ a:focus {
 .wrapper {
     position: relative;
     width: 100%;
-    max-width: 1366px;
     margin: 0 auto;
     background: #ffffff;
 }
@@ -45,7 +44,7 @@ a:focus {
 .back-to-top {
     position: fixed;
     display: none;
-    background: #fdbe33;
+    background: #FFCD00;
     color: #121518;
     width: 44px;
     height: 44px;
@@ -59,7 +58,7 @@ a:focus {
 }
 
 .back-to-top:hover {
-    color: #fdbe33;
+    color: #FFCD00;
     background: #121518;
 }
 
@@ -78,7 +77,7 @@ a:focus {
 .top-bar {
     position: relative;
     height: 90px;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .top-bar .logo {
@@ -89,8 +88,8 @@ a:focus {
 
 .top-bar .logo h1 {
     margin: 0;
-    color: #030f27;
-    font-size: 60px;
+    color: #000000;
+    font-size: 30px;
     line-height: 60px;
     font-weight: 700;
 }
@@ -115,7 +114,7 @@ a:focus {
 
 .top-bar .top-bar-icon [class^="flaticon-"]::before {
     margin: 0;
-    color: #030f27;
+    color: #000000;
     font-size: 40px;
 }
 
@@ -125,14 +124,14 @@ a:focus {
 
 .top-bar .top-bar-text h3 {
     margin: 0 0 5px 0;
-    color: #030f27;
+    color: #000000;
     font-size: 16px;
     font-weight: 400;
 }
 
 .top-bar .top-bar-text p {
     margin: 0;
-    color: #030f27;
+    color: #000000;
     font-size: 13px;
     font-weight: 400;
 }
@@ -155,7 +154,7 @@ a:focus {
 /**********************************/
 .nav-bar {
     position: relative;
-    background: #fdbe33;
+    background: #FFCD00;
     transition: .3s;
 }
 
@@ -167,14 +166,13 @@ a:focus {
     position: fixed;
     top: 0;
     width: 100%;
-    max-width: 1366px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
     z-index: 999;
 }
 
 .nav-bar .navbar {
     height: 100%;
-    background: #030f27 !important;
+    background: #000000 !important;
 }
 
 .navbar-dark .navbar-nav .nav-link,
@@ -187,7 +185,7 @@ a:focus {
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-    color: #fdbe33;
+    color: #FFCD00;
     transition: none;
 }
 
@@ -205,9 +203,9 @@ a:focus {
 }
 
 .nav-bar .btn:hover {
-    color: #030f27;
-    background: #fdbe33;
-    border-color: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
+    border-color: #FFCD00;
 }
 
 @media (min-width: 992px) {
@@ -330,9 +328,9 @@ a:focus {
 }
 
 .carousel .carousel-caption .btn:hover {
-    color: #030f27;
-    background: #fdbe33;
-    border-color: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
+    border-color: #FFCD00;
 }
 
 @media (max-width: 767.98px) {
@@ -385,12 +383,12 @@ a:focus {
     margin-bottom: 45px;
     padding: 90px 0;
     text-align: center;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .page-header h2 {
     position: relative;
-    color: #030f27;
+    color: #000000;
     font-size: 60px;
     font-weight: 700;
     margin-bottom: 20px;
@@ -404,14 +402,14 @@ a:focus {
     height: 2px;
     left: calc(50% - 50px);
     bottom: 0;
-    background: #030f27;
+    background: #000000;
 }
 
 .page-header a {
     position: relative;
     padding: 0 12px;
     font-size: 22px;
-    color: #030f27;
+    color: #000000;
 }
 
 .page-header a:hover {
@@ -472,7 +470,7 @@ a:focus {
 }
 
 .section-header p {
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -501,12 +499,12 @@ a:focus {
 }
 
 .feature .col-md-12 {
-    background: #030f27;
+    background: #000000;
 }
     
 .feature .col-md-12:nth-child(2n) {
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
 }
 
 .feature .feature-item {
@@ -544,19 +542,19 @@ a:focus {
     height: 79px;
     top: -18px;
     left: -9px;
-    background: #030f27;
+    background: #000000;
     border-radius: 60px;
     z-index: 2;
 }
 
 .feature .col-md-12:nth-child(2n) .feature-icon::after {
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .feature .feature-icon [class^="flaticon-"]::before {
     position: relative;
     margin: 0;
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 60px;
     line-height: 60px;
     z-index: 3;
@@ -568,14 +566,14 @@ a:focus {
 
 .feature .feature-text h3 {
     margin: 0 0 10px 0;
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 25px;
     font-weight: 600;
 }
 
 .feature .feature-text p {
     margin: 0;
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 18px;
     font-weight: 400;
 }
@@ -583,7 +581,7 @@ a:focus {
 .feature .col-md-12:nth-child(2n) [class^="flaticon-"]::before,
 .feature .col-md-12:nth-child(2n) h3,
 .feature .col-md-12:nth-child(2n) p {
-    color: #030f27;
+    color: #000000;
 }
 
 
@@ -622,15 +620,15 @@ a:focus {
     font-size: 16px;
     font-weight: 500;
     letter-spacing: 1px;
-    color: #030f27;
+    color: #000000;
     border-radius: 0;
-    background: #fdbe33;
+    background: #FFCD00;
     transition: .3s;
 }
 
 .about .about-text a.btn:hover {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 @media (max-width: 767.98px) {
@@ -668,13 +666,13 @@ a:focus {
     margin: 0;
     font-size: 60px;
     line-height: 60px;
-    background-image: linear-gradient(#ffffff, #fdbe33);
+    background-image: linear-gradient(#ffffff, #FFCD00);
+    background-clip: border-box;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 .fact .fact-right .fact-icon [class^="flaticon-"]::before {
-    background-image: linear-gradient(#ffffff, #030f27);
+    background-image: linear-gradient(#ffffff, #000000);
 }
 
 .fact .fact-left,
@@ -696,17 +694,17 @@ a:focus {
 }
 
 .fact .fact-left {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 .fact .fact-right {
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
 }
 
 .fact .fact-left h2 {
-    color: #fdbe33;
+    color: #FFCD00;
 }
 
 
@@ -763,7 +761,7 @@ a:focus {
     display: flex;
     align-items: center;
     height: 60px;
-    background: #030f27;
+    background: #000000;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -775,7 +773,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #FFCD00;
     text-align: left;
     overflow: hidden;
     white-space: nowrap;
@@ -792,8 +790,8 @@ a:focus {
     font-size: 60px;
     line-height: 60px;
     font-weight: 100;
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
     border-radius: 0;
     transition: .3s;
 }
@@ -844,7 +842,7 @@ a:focus {
     display: block;
     width: 100px;
     height: 100px;
-    background: #fdbe33;
+    background: #FFCD00;
     border-radius: 50%;
     animation: pulse-border 1500ms ease-out infinite;
 }
@@ -859,13 +857,13 @@ a:focus {
     display: block;
     width: 100px;
     height: 100px;
-    background: #fdbe33;
+    background: #FFCD00;
     border-radius: 50%;
     transition: all 200ms;
 }
 
 .video .btn-play:hover:after {
-    background-color: darken(#fdbe33, 10%);
+    background-color: darken(#FFCD00, 10%);
 }
 
 .video .btn-play img {
@@ -882,7 +880,7 @@ a:focus {
     z-index: 3;
     width: 0;
     height: 0;
-    border-left: 32px solid #030f27;
+    border-left: 32px solid #000000;
     border-top: 22px solid transparent;
     border-bottom: 22px solid transparent;
 }
@@ -951,14 +949,14 @@ a:focus {
     position: relative;
     padding: 25px 15px;
     text-align: center;
-    background: #030f27;
+    background: #000000;
     transition: .5s;
 }
 
 .team .team-text h2 {
     font-size: 20px;
     font-weight: 600;
-    color: #fdbe33;
+    color: #FFCD00;
     transition: .5s;
 }
 
@@ -968,11 +966,11 @@ a:focus {
 }
 
 .team .team-item:hover .team-text {
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .team .team-item:hover .team-text h2 {
-    color: #030f27;
+    color: #000000;
     letter-spacing: 1px;
 }
 
@@ -1043,7 +1041,7 @@ a:focus {
     height: 100%;
     top: 0;
     left: calc(50% - .5px);
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .faqs #accordion-1 {
@@ -1097,14 +1095,14 @@ a:focus {
 }
 
 .faqs .card-header [data-toggle="collapse"][aria-expanded="true"] {
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .faqs .card-header [data-toggle="collapse"]:after {
     font-family: 'font Awesome 5 Free';
     content: "\f067";
     float: right;
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 12px;
     font-weight: 900;
     transition: .5s;
@@ -1114,7 +1112,7 @@ a:focus {
     font-family: 'font Awesome 5 Free';
     content: "\f068";
     float: right;
-    color: #030f27;
+    color: #000000;
     font-size: 12px;
     font-weight: 900;
     transition: .5s;
@@ -1200,7 +1198,7 @@ a:focus {
 }
 
 .testimonial .testimonial-slider h3 {
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 22px;
     font-weight: 700;
 }
@@ -1250,7 +1248,7 @@ a:focus {
     display: flex;
     align-items: center;
     height: 60px;
-    background: #030f27;
+    background: #000000;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -1262,7 +1260,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 18px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #FFCD00;
     text-align: left;
     overflow: hidden;
     white-space: nowrap;
@@ -1279,8 +1277,8 @@ a:focus {
     font-size: 60px;
     line-height: 60px;
     font-weight: 100;
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
     border-radius: 0;
     transition: .3s;
 }
@@ -1302,7 +1300,7 @@ a:focus {
     height: 1px;
     left: calc(50% - 50px);
     bottom: 0;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .blog .blog-meta p {
@@ -1331,15 +1329,15 @@ a:focus {
 }
 
 .blog .pagination .page-link {
-    color: #030f27;
+    color: #000000;
     border-radius: 0;
-    border-color: #fdbe33;
+    border-color: #FFCD00;
 }
 
 .blog .pagination .page-link:hover,
 .blog .pagination .page-item.active .page-link {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 .blog .pagination .disabled .page-link {
@@ -1382,8 +1380,8 @@ a:focus {
 }
 
 .single .single-tags a:hover {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 .single .single-bio {
@@ -1496,16 +1494,16 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
     font-size: 16px;
     transition: .3s;
 }
 
 .single .related-slider .owl-nav .owl-prev:hover,
 .single .related-slider .owl-nav .owl-next:hover {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 .single .single-comment {
@@ -1562,13 +1560,13 @@ a:focus {
 .single .comment-text .btn {
     padding: 3px 10px;
     font-size: 14px;
-    color: #030f27;
+    color: #000000;
     background: #dddddd;
     border-radius: 0;
 }
 
 .single .comment-text .btn:hover {
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .single .comment-form {
@@ -1597,13 +1595,13 @@ a:focus {
 
 .single .comment-form .btn {
     padding: 15px 30px;
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
 }
 
 .single .comment-form .btn:hover {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 
@@ -1641,7 +1639,7 @@ a:focus {
     height: 2px;
     bottom: 0;
     left: 0;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .sidebar .sidebar-widget .search-widget {
@@ -1665,7 +1663,7 @@ a:focus {
     height: 40px;
     padding: 0;
     font-size: 25px;
-    color: #fdbe33;
+    color: #FFCD00;
     background: none;
     border-radius: 0;
     border: none;
@@ -1673,7 +1671,7 @@ a:focus {
 }
 
 .sidebar .search-widget .btn:hover {
-    color: #030f27;
+    color: #000000;
 }
 
 .sidebar .sidebar-widget .recent-post {
@@ -1685,15 +1683,15 @@ a:focus {
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
     border-radius: 0;
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link:hover,
 .sidebar .tab-post .nav.nav-pills .nav-link.active {
-    color: #030f27;
-    background: #fdbe33;
+    color: #000000;
+    background: #FFCD00;
 }
 
 .sidebar .tab-post .tab-content {
@@ -1733,7 +1731,7 @@ a:focus {
     content: '\f105';
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
-    color: #fdbe33;
+    color: #FFCD00;
     left: 1px;
 }
 
@@ -1758,8 +1756,8 @@ a:focus {
 }
 
 .single .tag-widget a:hover {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 .sidebar .image-widget {
@@ -1800,20 +1798,20 @@ a:focus {
     display: inline-block;
     margin: 5px;
     padding: 8px 15px;
-    color: #030f27;
+    color: #000000;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
     border-radius: 0;
-    background: #fdbe33;
+    background: #FFCD00;
     border: none;
     transition: .3s;
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-    background: #030f27;
-    color: #fdbe33;
+    background: #000000;
+    color: #FFCD00;
 }
 
 .portfolio .load-more {
@@ -1827,8 +1825,8 @@ a:focus {
 }
 
 .portfolio .load-more .btn:hover {
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
 }
 
 .portfolio .portfolio-warp {
@@ -1880,7 +1878,7 @@ a:focus {
     display: flex;
     align-items: center;
     height: 60px;
-    background: #030f27;
+    background: #000000;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -1892,7 +1890,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #FFCD00;
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
@@ -1909,7 +1907,7 @@ a:focus {
     font-size: 60px;
     line-height: 60px;
     font-weight: 100;
-    color: #030f27;
+    color: #000000;
     background: #ffffff;
     border-radius: 0;
     transition: .3s;
@@ -1917,7 +1915,7 @@ a:focus {
 
 .portfolio .portfolio-warp:hover a.btn {
     color: #ffffff;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 
@@ -1936,11 +1934,11 @@ a:focus {
 }
 
 .contact .col-md-6:first-child {
-    background: #030f27;
+    background: #000000;
 }
 
 .contact .col-md-6:last-child {
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .contact .contact-info {
@@ -1961,7 +1959,7 @@ a:focus {
 
 .contact .contact-item [class^="flaticon-"]::before {
     margin: 0;
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 40px;
 }
 
@@ -1972,7 +1970,7 @@ a:focus {
 }
 
 .contact .contact-text h2 {
-    color: #fdbe33;
+    color: #FFCD00;
     font-size: 20px;
     font-weight: 600;
 }
@@ -2032,15 +2030,15 @@ a:focus {
     padding: 16px 30px;
     font-size: 16px;
     font-weight: 600;
-    color: #fdbe33;
-    background: #030f27;
+    color: #FFCD00;
+    background: #000000;
     border: none;
     border-radius: 0;
     transition: .3s;
 }
 
 .contact .contact-form .btn:hover {
-    color: #030f27;
+    color: #000000;
     background: #ffffff;
 }
 
@@ -2058,7 +2056,7 @@ a:focus {
     position: relative;
     margin-top: 45px;
     padding-top: 90px;
-    background: #030f27;
+    background: #000000;
     color: #ffffff;
 }
 
@@ -2075,7 +2073,7 @@ a:focus {
     padding-bottom: 10px;
     font-size: 20px;
     font-weight: 600;
-    color: #fdbe33;
+    color: #FFCD00;
 }
 
 .footer h2::after {
@@ -2085,7 +2083,7 @@ a:focus {
     height: 2px;
     left: 0;
     bottom: 0;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .footer .footer-link a {
@@ -2104,7 +2102,7 @@ a:focus {
 }
 
 .footer .footer-link a:hover {
-    color: #fdbe33;
+    color: #FFCD00;
     letter-spacing: 1px;
 }
 
@@ -2134,12 +2132,12 @@ a:focus {
 }
 
 .footer .footer-social a:hover {
-    background: #fdbe33;
-    border-color: #fdbe33;
+    background: #FFCD00;
+    border-color: #FFCD00;
 }
 
 .footer .footer-social a:hover i {
-    color: #030f27;
+    color: #000000;
 }
 
 .footer .newsletter .form {
@@ -2163,16 +2161,16 @@ a:focus {
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #fdbe33;
+    color: #FFCD00;
     background: #121518;
     border-radius: 0;
-    border: 2px solid #fdbe33;
+    border: 2px solid #FFCD00;
     transition: .3s;
 }
 
 .footer .newsletter .btn:hover {
     color: #121518;
-    background: #fdbe33;
+    background: #FFCD00;
 }
 
 .footer .footer-menu .f-menu {
@@ -2193,7 +2191,7 @@ a:focus {
 }
 
 .footer .footer-menu .f-menu a:hover {
-    color: #fdbe33;
+    color: #FFCD00;
 }
 
 .footer .footer-menu .f-menu a:last-child {
@@ -2217,7 +2215,7 @@ a:focus {
 }
 
 .footer .copyright p a {
-    color: #fdbe33;
+    color: #FFCD00;
     font-weight: 500;
     letter-spacing: 1px;
 }
